# satellite-attitude-on-off-control

./: README.md  main.py  pyproject.toml
docs/: Trabalho Avaliativo.docx  activity_diagram.pu
